+ Rotas para a requisiçao e criaçao de tags
