# service/documentation/swagger.json
@@ -9,6 +9,78 @@
     "host": "localhost:8080",
     "basePath": "/api/",
     "paths": {
+        "/tags/": {
+          "get": {
+            "summary": "Lista todas as tags existentes para posts.",
+            "produces": [
+              "application/json"
+            ],
+            "tags": ["Tags"],
+            "responses": {
+              "200": {
+                "description": "A requisição foi bem sucedida e as tags foram enviadas."
+              },
+              "404": {
+                "description": "Não existem tags a serem recuperadas."
+              },
+              "400": {
+                "description": "Ocorreu algum tipo de erro ao recuperar os documentos."
+              }
+            }
+          }
+        },
+
+        "/tags/new": {
+          "post": {
+            "summary": "Cria uma nova tag a partir do objeto enviado no body do request.",
+            "produces": [
+              "application/json"
+            ],
+            "tags": ["Tags"],
+            "responses": {
+              "201": {
+                "description":"A requisição foi bem sucedida e uma nova tag foi criado."
+              },
+              "400": {
+                "description": "Ocorreu algum tipo de erro ao tentar criar um novo documento."
+              },
+              "401": {
+                "description":"O request não pôde ser completado porque o usuário existe mas não possui autorização para continuar."
+              },
+              "403": {
+                "description": "O request não pode ser completado porque o body não foi preenchido ou foi preenchido incorretamente."
+              },
+              "404": {
+                "description":"O request não pôde ser completado porque o usuário não existe."
+              },
+              "406": {
+                "description": "O request não pôde ser completado porque houve alguma inconsistência no body ou porque a operação no banco falhou."
+              }
+            },
+            "parameters":[ {
+              "name": "Tag",
+              "description": "Objeto post a ser inserido no banco contendo o username do usuário que fez o pedido.",
+              "schema": {
+                "description": "Objeto post a ser inserido no banco contendo o username do usuário que fez o pedido.",
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "name": {
+                    "type": "string"
+                  }
+                },
+                "example": {
+                  "username": "user01",
+                  "name": "Nova tag"
+                }
+              },
+              "in": "body"
+            } ]
+          }
+        },
+
         "/posts/": {
           "get": {
             "summary": "Lista todos os posts.",
